# template_repo

./: .gitignore  .pre-commit-config.yaml  CODEX.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: setup_project.py
src/template_project/: __init__.py
tests/: test_basic.py
