[project]
name = "template-project"
version = "0.1.0"
description = "A template project with pre-commit, uv, ruff, and mypy setup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "pre-commit",
    "types-requests",
    "types-PyYAML",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.2",
    "types-requests",
    "types-PyYAML",
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
pythonpath = ["src"]
asyncio_mode = "auto"
